--- a/content/resources/15-279f12.md
+++ b/content/resources/15-279f12.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: Management communication requires many skills, including writing and
   editing business correspondence. Photograph courtesy of Ben Ullman.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-279-management-communication-for-undergraduates-fall-2012/6194b09353004eab70419c9001cec392_15-279f12.jpg
+file: /media/courses/15-279-management-communication-for-undergraduates-fall-2012/6194b09353004eab70419c9001cec392_15-279f12.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Management communication requires many skills, including writing and editing
@@ -10,6 +10,8 @@ image_metadata:
   credit: Photograph courtesy of Ben Ullman.
   image-alt: Black-and-white photograph of a businessman writing a memo in front of
     a computer.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: 15-279f12.jpg
 uid: 6194b093-5300-4eab-7041-9c9001cec392
