--- a/content/resources/mit15_279f12_lec01and02.md
+++ b/content/resources/mit15_279f12_lec01and02.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: This resource contains information regarding communicating strategically.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-279-management-communication-for-undergraduates-fall-2012/830288728fa31e79bcfeda1debdc4808_MIT15_279F12_lec01and02.pdf
+file: /media/courses/15-279-management-communication-for-undergraduates-fall-2012/830288728fa31e79bcfeda1debdc4808_MIT15_279F12_lec01and02.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: 'Lectures 1 and 2: Communicating Strategically'
 uid: 83028872-8fa3-1e79-bcfe-da1debdc4808
