--- a/content/resources/mit15_279f12_lec05.md
+++ b/content/resources/mit15_279f12_lec05.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: This resource contains information regarding listening and feedback.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-279-management-communication-for-undergraduates-fall-2012/d7d0feb22fd9f8f08e6f0b1a474fd16f_MIT15_279F12_lec05.pdf
+file: /media/courses/15-279-management-communication-for-undergraduates-fall-2012/d7d0feb22fd9f8f08e6f0b1a474fd16f_MIT15_279F12_lec05.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: 'Lecture 5: Listening and Feedback'
 uid: d7d0feb2-2fd9-f8f0-8e6f-0b1a474fd16f
