--- a/content/resources/mit15_279f12_lec07and08.md
+++ b/content/resources/mit15_279f12_lec07and08.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: This resource contains information regarding guidelines for effective
   writing.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-279-management-communication-for-undergraduates-fall-2012/586b78c3b77db09c8c9118901d877fda_MIT15_279F12_lec07and08.pdf
+file: /media/courses/15-279-management-communication-for-undergraduates-fall-2012/586b78c3b77db09c8c9118901d877fda_MIT15_279F12_lec07and08.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: 'Lectures 7 and 8: Guidelines for Effective Writing'
 uid: 586b78c3-b77d-b09c-8c91-18901d877fda
