--- a/content/resources/mit15_279f12_lec09.md
+++ b/content/resources/mit15_279f12_lec09.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: This resource contains information regarding guidelines for effective
   teamwork.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-279-management-communication-for-undergraduates-fall-2012/cee944be10fc5496d2cf554fa330383a_MIT15_279F12_lec09.pdf
+file: /media/courses/15-279-management-communication-for-undergraduates-fall-2012/cee944be10fc5496d2cf554fa330383a_MIT15_279F12_lec09.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: 'Lecture 9: Guidelines for Effective Teamwork'
 uid: cee944be-10fc-5496-d2cf-554fa330383a
