--- a/content/resources/mit15_279f12_lec13.md
+++ b/content/resources/mit15_279f12_lec13.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: This resource contains information regarding team reports and presentations.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-279-management-communication-for-undergraduates-fall-2012/d1f5921a60692ab10ad1c9ea5fa0da65_MIT15_279F12_lec13.pdf
+file: /media/courses/15-279-management-communication-for-undergraduates-fall-2012/d1f5921a60692ab10ad1c9ea5fa0da65_MIT15_279F12_lec13.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: 'Lecture 13: Team Reports and Presentations '
 uid: d1f5921a-6069-2ab1-0ad1-c9ea5fa0da65
