--- a/content/resources/mit15_279f12_lec17and18.md
+++ b/content/resources/mit15_279f12_lec17and18.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: This resource contains information regarding cross-cultural communication.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-279-management-communication-for-undergraduates-fall-2012/6da87fea25d97f0719a69cd25452fc7e_MIT15_279F12_lec17and18.pdf
+file: /media/courses/15-279-management-communication-for-undergraduates-fall-2012/6da87fea25d97f0719a69cd25452fc7e_MIT15_279F12_lec17and18.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: 'Lecture 17 and 18: Cross-Cultural Communication'
 uid: 6da87fea-25d9-7f07-19a6-9cd25452fc7e
