--- a/content/resources/mit15_279f12_lec19and20.md
+++ b/content/resources/mit15_279f12_lec19and20.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: This resource contains information regarding communication for leaders.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-279-management-communication-for-undergraduates-fall-2012/ebe5003451ed7af5ad642f7b90fac491_MIT15_279F12_lec19and20.pdf
+file: /media/courses/15-279-management-communication-for-undergraduates-fall-2012/ebe5003451ed7af5ad642f7b90fac491_MIT15_279F12_lec19and20.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: 'Lectures 19 and 20: Communication for Leaders'
 uid: ebe50034-51ed-7af5-ad64-2f7b90fac491
