--- a/content/resources/mit15_279f12_pset1.md
+++ b/content/resources/mit15_279f12_pset1.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: This resource contains information regarding clear, concise writing in
   e-mail.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-279-management-communication-for-undergraduates-fall-2012/cd99f9f6b9d48e794208cc092d2c3fe8_MIT15_279F12_pset1.pdf
+file: /media/courses/15-279-management-communication-for-undergraduates-fall-2012/cd99f9f6b9d48e794208cc092d2c3fe8_MIT15_279F12_pset1.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: 'Problem Set 1: Clear, Concise Writing in E-Mail'
 uid: cd99f9f6-b9d4-8e79-4208-cc092d2c3fe8
