--- a/content/resources/mit15_279f12_pset3.md
+++ b/content/resources/mit15_279f12_pset3.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: This resource contains information regarding mid-semester self-evaluation.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-279-management-communication-for-undergraduates-fall-2012/4dff8e3f2e57f0e669a8f570dc717e4e_MIT15_279F12_pset3.pdf
+file: /media/courses/15-279-management-communication-for-undergraduates-fall-2012/4dff8e3f2e57f0e669a8f570dc717e4e_MIT15_279F12_pset3.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: 'Problem Set 3: Mid-Semester Self-Evaluation'
 uid: 4dff8e3f-2e57-f0e6-69a8-f570dc717e4e
