Sync all content

--- a/content/resources/mit15_279f12_pset1.md
+++ b/content/resources/mit15_279f12_pset1.md
@@ -9,6 +9,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: e866f131-7380-bbbf-41a4-a44d68b5dc73
 resourcetype: Document
 title: 'Problem Set 1: Clear, Concise Writing in E-Mail'
 uid: cd99f9f6-b9d4-8e79-4208-cc092d2c3fe8
