--- a/content/resources/mit15_279f12_pset2.md
+++ b/content/resources/mit15_279f12_pset2.md
@@ -9,6 +9,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: e866f131-7380-bbbf-41a4-a44d68b5dc73
 resourcetype: Document
 title: 'Problem Set 2: Should MacGregor Dining Be Re-Opened?'
 uid: eabcef1c-fcac-b8ae-0696-448c352c0e2c
