--- a/content/resources/mit15_279f12_lec01and02.md
+++ b/content/resources/mit15_279f12_lec01and02.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 9e0d741f-c93c-3951-4668-671d38a21d9e
 resourcetype: Document
 title: 'Lectures 1 and 2: Communicating Strategically'
 uid: 83028872-8fa3-1e79-bcfe-da1debdc4808
