--- a/content/resources/mit15_279f12_lec03and04.md
+++ b/content/resources/mit15_279f12_lec03and04.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 9e0d741f-c93c-3951-4668-671d38a21d9e
 resourcetype: Document
 title: 'Lectures 3 and 4: Giving Presentations'
 uid: 90da79d5-1ab4-267d-7824-fd0b32fe7ed9
