--- a/content/resources/mit15_279f12_lec05.md
+++ b/content/resources/mit15_279f12_lec05.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 9e0d741f-c93c-3951-4668-671d38a21d9e
 resourcetype: Document
 title: 'Lecture 5: Listening and Feedback'
 uid: d7d0feb2-2fd9-f8f0-8e6f-0b1a474fd16f
