--- a/content/resources/mit15_279f12_lec07and08.md
+++ b/content/resources/mit15_279f12_lec07and08.md
@@ -9,6 +9,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 9e0d741f-c93c-3951-4668-671d38a21d9e
 resourcetype: Document
 title: 'Lectures 7 and 8: Guidelines for Effective Writing'
 uid: 586b78c3-b77d-b09c-8c91-18901d877fda
