--- a/content/resources/mit15_279f12_lec09.md
+++ b/content/resources/mit15_279f12_lec09.md
@@ -9,6 +9,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 9e0d741f-c93c-3951-4668-671d38a21d9e
 resourcetype: Document
 title: 'Lecture 9: Guidelines for Effective Teamwork'
 uid: cee944be-10fc-5496-d2cf-554fa330383a
