--- a/content/resources/mit15_279f12_lec13.md
+++ b/content/resources/mit15_279f12_lec13.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 9e0d741f-c93c-3951-4668-671d38a21d9e
 resourcetype: Document
 title: 'Lecture 13: Team Reports and Presentations '
 uid: d1f5921a-6069-2ab1-0ad1-c9ea5fa0da65
