--- a/content/resources/mit15_279f12_lec17and18.md
+++ b/content/resources/mit15_279f12_lec17and18.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 9e0d741f-c93c-3951-4668-671d38a21d9e
 resourcetype: Document
 title: 'Lecture 17 and 18: Cross-Cultural Communication'
 uid: 6da87fea-25d9-7f07-19a6-9cd25452fc7e
