--- a/content/resources/mit15_279f12_lec19and20.md
+++ b/content/resources/mit15_279f12_lec19and20.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 9e0d741f-c93c-3951-4668-671d38a21d9e
 resourcetype: Document
 title: 'Lectures 19 and 20: Communication for Leaders'
 uid: ebe50034-51ed-7af5-ad64-2f7b90fac491
