--- a/content/resources/mit15_279f12_pset3.md
+++ b/content/resources/mit15_279f12_pset3.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: e866f131-7380-bbbf-41a4-a44d68b5dc73
 resourcetype: Document
 title: 'Problem Set 3: Mid-Semester Self-Evaluation'
 uid: 4dff8e3f-2e57-f0e6-69a8-f570dc717e4e
