--- a/content/resources/15-279f12-th.md
+++ b/content/resources/15-279f12-th.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: Management communication requires many skills, including writing and
   editing business correspondence. Photograph courtesy of Ben Ullman.
-file: /media/courses/15-279-management-communication-for-undergraduates-fall-2012/3a01bd3a7fb0643e2d8c00db896612a8_15-279f12-th.jpg
+file: /courses/15-279-management-communication-for-undergraduates-fall-2012/3a01bd3a7fb0643e2d8c00db896612a8_15-279f12-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Management communication requires many skills, including writing and editing
@@ -15,4 +15,10 @@ ocw_type: OCWImage
 resourcetype: Image
 title: 15-279f12-th.jpg
 uid: 3a01bd3a-7fb0-643e-2d8c-00db896612a8
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
+Management communication requires many skills, including writing and editing business correspondence. Photograph courtesy of Ben Ullman.
+
