--- a/content/resources/15-279f12.md
+++ b/content/resources/15-279f12.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: Management communication requires many skills, including writing and
   editing business correspondence. Photograph courtesy of Ben Ullman.
-file: /media/courses/15-279-management-communication-for-undergraduates-fall-2012/6194b09353004eab70419c9001cec392_15-279f12.jpg
+file: /courses/15-279-management-communication-for-undergraduates-fall-2012/6194b09353004eab70419c9001cec392_15-279f12.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Management communication requires many skills, including writing and editing
@@ -15,4 +15,10 @@ ocw_type: OCWImage
 resourcetype: Image
 title: 15-279f12.jpg
 uid: 6194b093-5300-4eab-7041-9c9001cec392
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
+Management communication requires many skills, including writing and editing business correspondence. Photograph courtesy of Ben Ullman.
+
