--- a/content/resources/mit15_279f12_lec01and02.md
+++ b/content/resources/mit15_279f12_lec01and02.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource contains information regarding communicating strategically.
-file: /media/courses/15-279-management-communication-for-undergraduates-fall-2012/830288728fa31e79bcfeda1debdc4808_MIT15_279F12_lec01and02.pdf
+file: /courses/15-279-management-communication-for-undergraduates-fall-2012/830288728fa31e79bcfeda1debdc4808_MIT15_279F12_lec01and02.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -12,4 +12,10 @@ parent_uid: 9e0d741f-c93c-3951-4668-671d38a21d9e
 resourcetype: Document
 title: 'Lectures 1 and 2: Communicating Strategically'
 uid: 83028872-8fa3-1e79-bcfe-da1debdc4808
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
+This resource contains information regarding communicating strategically.
+
