--- a/content/resources/mit15_279f12_lec03and04.md
+++ b/content/resources/mit15_279f12_lec03and04.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource contains information regarding giving presentations.
-file: /media/courses/15-279-management-communication-for-undergraduates-fall-2012/90da79d51ab4267d7824fd0b32fe7ed9_MIT15_279F12_lec03and04.pdf
+file: /courses/15-279-management-communication-for-undergraduates-fall-2012/90da79d51ab4267d7824fd0b32fe7ed9_MIT15_279F12_lec03and04.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -12,4 +12,10 @@ parent_uid: 9e0d741f-c93c-3951-4668-671d38a21d9e
 resourcetype: Document
 title: 'Lectures 3 and 4: Giving Presentations'
 uid: 90da79d5-1ab4-267d-7824-fd0b32fe7ed9
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
+This resource contains information regarding giving presentations.
+
