--- a/content/resources/mit15_279f12_lec05.md
+++ b/content/resources/mit15_279f12_lec05.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource contains information regarding listening and feedback.
-file: /media/courses/15-279-management-communication-for-undergraduates-fall-2012/d7d0feb22fd9f8f08e6f0b1a474fd16f_MIT15_279F12_lec05.pdf
+file: /courses/15-279-management-communication-for-undergraduates-fall-2012/d7d0feb22fd9f8f08e6f0b1a474fd16f_MIT15_279F12_lec05.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -12,4 +12,10 @@ parent_uid: 9e0d741f-c93c-3951-4668-671d38a21d9e
 resourcetype: Document
 title: 'Lecture 5: Listening and Feedback'
 uid: d7d0feb2-2fd9-f8f0-8e6f-0b1a474fd16f
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
+This resource contains information regarding listening and feedback.
+
