--- a/content/resources/mit15_279f12_lec07and08.md
+++ b/content/resources/mit15_279f12_lec07and08.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: This resource contains information regarding guidelines for effective
   writing.
-file: /media/courses/15-279-management-communication-for-undergraduates-fall-2012/586b78c3b77db09c8c9118901d877fda_MIT15_279F12_lec07and08.pdf
+file: /courses/15-279-management-communication-for-undergraduates-fall-2012/586b78c3b77db09c8c9118901d877fda_MIT15_279F12_lec07and08.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -13,4 +13,10 @@ parent_uid: 9e0d741f-c93c-3951-4668-671d38a21d9e
 resourcetype: Document
 title: 'Lectures 7 and 8: Guidelines for Effective Writing'
 uid: 586b78c3-b77d-b09c-8c91-18901d877fda
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
+This resource contains information regarding guidelines for effective writing.
+
