--- a/content/resources/mit15_279f12_lec13.md
+++ b/content/resources/mit15_279f12_lec13.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource contains information regarding team reports and presentations.
-file: /media/courses/15-279-management-communication-for-undergraduates-fall-2012/d1f5921a60692ab10ad1c9ea5fa0da65_MIT15_279F12_lec13.pdf
+file: /courses/15-279-management-communication-for-undergraduates-fall-2012/d1f5921a60692ab10ad1c9ea5fa0da65_MIT15_279F12_lec13.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -12,4 +12,10 @@ parent_uid: 9e0d741f-c93c-3951-4668-671d38a21d9e
 resourcetype: Document
 title: 'Lecture 13: Team Reports and Presentations '
 uid: d1f5921a-6069-2ab1-0ad1-c9ea5fa0da65
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
+This resource contains information regarding team reports and presentations.
+
