--- a/content/resources/mit15_279f12_lec19and20.md
+++ b/content/resources/mit15_279f12_lec19and20.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource contains information regarding communication for leaders.
-file: /media/courses/15-279-management-communication-for-undergraduates-fall-2012/ebe5003451ed7af5ad642f7b90fac491_MIT15_279F12_lec19and20.pdf
+file: /courses/15-279-management-communication-for-undergraduates-fall-2012/ebe5003451ed7af5ad642f7b90fac491_MIT15_279F12_lec19and20.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -12,4 +12,10 @@ parent_uid: 9e0d741f-c93c-3951-4668-671d38a21d9e
 resourcetype: Document
 title: 'Lectures 19 and 20: Communication for Leaders'
 uid: ebe50034-51ed-7af5-ad64-2f7b90fac491
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
+This resource contains information regarding communication for leaders.
+
