--- a/content/resources/mit15_279f12_pset1.md
+++ b/content/resources/mit15_279f12_pset1.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: This resource contains information regarding clear, concise writing in
   e-mail.
-file: /media/courses/15-279-management-communication-for-undergraduates-fall-2012/cd99f9f6b9d48e794208cc092d2c3fe8_MIT15_279F12_pset1.pdf
+file: /courses/15-279-management-communication-for-undergraduates-fall-2012/cd99f9f6b9d48e794208cc092d2c3fe8_MIT15_279F12_pset1.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
@@ -13,4 +13,10 @@ parent_uid: e866f131-7380-bbbf-41a4-a44d68b5dc73
 resourcetype: Document
 title: 'Problem Set 1: Clear, Concise Writing in E-Mail'
 uid: cd99f9f6-b9d4-8e79-4208-cc092d2c3fe8
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
+This resource contains information regarding clear, concise writing in e-mail.
+
