--- a/content/resources/mit15_279f12_pset3.md
+++ b/content/resources/mit15_279f12_pset3.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource contains information regarding mid-semester self-evaluation.
-file: /media/courses/15-279-management-communication-for-undergraduates-fall-2012/4dff8e3f2e57f0e669a8f570dc717e4e_MIT15_279F12_pset3.pdf
+file: /courses/15-279-management-communication-for-undergraduates-fall-2012/4dff8e3f2e57f0e669a8f570dc717e4e_MIT15_279F12_pset3.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
@@ -12,4 +12,10 @@ parent_uid: e866f131-7380-bbbf-41a4-a44d68b5dc73
 resourcetype: Document
 title: 'Problem Set 3: Mid-Semester Self-Evaluation'
 uid: 4dff8e3f-2e57-f0e6-69a8-f570dc717e4e
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
+This resource contains information regarding mid-semester self-evaluation.
+
