Sync all content

--- a/content/resources/15-279f12.md
+++ b/content/resources/15-279f12.md
@@ -11,6 +11,7 @@ image_metadata:
   image-alt: Black-and-white photograph of a businessman writing a memo in front of
     a computer.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 15-279f12.jpg
@@ -21,4 +22,3 @@ video_metadata:
   youtube_id: null
 ---
 Management communication requires many skills, including writing and editing business correspondence. Photograph courtesy of Ben Ullman.
-
