--- a/content/resources/mit15_279f12_lec03and04.md
+++ b/content/resources/mit15_279f12_lec03and04.md
@@ -5,6 +5,7 @@ file: /courses/15-279-management-communication-for-undergraduates-fall-2012/90da
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -18,4 +19,3 @@ video_metadata:
   youtube_id: null
 ---
 This resource contains information regarding giving presentations.
-
