--- a/content/resources/mit15_279f12_pset1.md
+++ b/content/resources/mit15_279f12_pset1.md
@@ -6,6 +6,7 @@ file: /courses/15-279-management-communication-for-undergraduates-fall-2012/cd99
 file_type: application/pdf
 learning_resource_types:
 - Assignments
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
@@ -19,4 +20,3 @@ video_metadata:
   youtube_id: null
 ---
 This resource contains information regarding clear, concise writing in e-mail.
-
