Sync all content

--- a/content/resources/mit15_279f12_lec03and04.md
+++ b/content/resources/mit15_279f12_lec03and04.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: This resource contains information regarding giving presentations.
 file: /courses/15-279-management-communication-for-undergraduates-fall-2012/90da79d51ab4267d7824fd0b32fe7ed9_MIT15_279F12_lec03and04.pdf
+file_size: 854369
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
