--- a/content/resources/mit15_279f12_lec17and18.md
+++ b/content/resources/mit15_279f12_lec17and18.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: This resource contains information regarding cross-cultural communication.
 file: /courses/15-279-management-communication-for-undergraduates-fall-2012/6da87fea25d97f0719a69cd25452fc7e_MIT15_279F12_lec17and18.pdf
+file_size: 1083114
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
