--- a/content/resources/mit15_279f12_lec19and20.md
+++ b/content/resources/mit15_279f12_lec19and20.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: This resource contains information regarding communication for leaders.
 file: /courses/15-279-management-communication-for-undergraduates-fall-2012/ebe5003451ed7af5ad642f7b90fac491_MIT15_279F12_lec19and20.pdf
+file_size: 682762
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
