--- a/content/resources/mit15_279f12_pset2.md
+++ b/content/resources/mit15_279f12_pset2.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains information regarding should MacGregor dining
   Be re-opened?
 file: /courses/15-279-management-communication-for-undergraduates-fall-2012/eabcef1cfcacb8ae0696448c352c0e2c_MIT15_279F12_pset2.pdf
+file_size: 560655
 file_type: application/pdf
 learning_resource_types:
 - Assignments
