--- a/content/resources/mit15_279f12_pset3.md
+++ b/content/resources/mit15_279f12_pset3.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: This resource contains information regarding mid-semester self-evaluation.
 file: /courses/15-279-management-communication-for-undergraduates-fall-2012/4dff8e3f2e57f0e669a8f570dc717e4e_MIT15_279F12_pset3.pdf
+file_size: 41093
 file_type: application/pdf
 learning_resource_types:
 - Assignments
