--- a/content/resources/mit15_279f12_lec05.md
+++ b/content/resources/mit15_279f12_lec05.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: This resource contains information regarding listening and feedback.
 file: /courses/15-279-management-communication-for-undergraduates-fall-2012/d7d0feb22fd9f8f08e6f0b1a474fd16f_MIT15_279F12_lec05.pdf
+file_size: 740463
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
